# petnet-app

./: .alias  .gitignore  .pylintrc  .repl-start.py  README.md  justfile  mk  mypy.ini  pyproject.toml  pytest.ini  tasks.py
.github/workflows/: python-app.yml
petnet_app/: __init__.py  config.py  loglib.py  main.py
petnet_app/db/: data_store.py  user_db.py
petnet_app/models/: __init__.py  model_validations.py  status.py  user.py  version.py
tests/: clocker.py  fake_data_store.py  integration.py  redis-test.conf  test_condig.py  test_config.py  test_data_store.py  test_loglib.py  test_main.py  test_model_validations.py  test_status.py  test_user.py  test_user_db.py  test_version.py
